# roadbogo-api

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: backend-ci.yml
app/: main.py
app/core/: config.py  database.py  exception_handlers.py  exceptions.py  logging.py  password_policy.py  responses.py  security.py  storage.py
app/dependencies/: auth.py  permissions.py
app/middleware/: request_context.py
app/models/: __init__.py  ai.py  auth.py  common.py  dispatch.py  file.py  mvp.py  (+6 more)
migrations/: env.py
scripts/: bootstrap_dev_controller.py  compare_mvp_databases.py
tests/: test_action_file.py  test_ai_inference_client.py  test_auth_api.py  test_auth_dependency.py  test_auth_model_metadata.py  test_auth_schemas.py  test_auth_service.py  test_bootstrap_dev_controller.py  test_cctv_read_api.py  test_config.py  test_database_config.py  test_dispatch_assignment_api.py  test_dispatch_assignment_service.py  test_dispatch_completion_api.py  test_dispatch_completion_service.py  test_dispatch_progress_api.py  test_dispatch_progress_service.py  test_dispatch_responder_api.py  test_dispatch_responder_service.py  test_error_response.py  test_health.py  test_incident_close_api.py  test_incident_close_service.py  test_incident_command_api.py  test_incident_command_service.py  test_incident_decision_api.py  test_incident_decision_service.py  test_incident_read_api.py  test_mail.py  test_password_policy.py  test_permission_dependency.py  test_request_context.py  test_responder_api.py  test_security.py  test_storage.py
(+48 files in other folders)
