[project]
name = "roadbogo-api"
version = "0.1.0"
description = "Roadbogo service API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "minio>=7.2.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.4.0",
  "pymysql>=1.1.1",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
